fix umlauts being cut off in firefox

--- a/src/themes/default/index.scss
+++ b/src/themes/default/index.scss
@@ -45,6 +45,7 @@
       color: $highlight1;
       font-size: 18px;
       font-weight: 600;
+      line-height: 1.4em;
       margin-bottom: 3px;
       overflow: hidden;
       text-overflow: ellipsis;
